--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
- 
+ <!DOCTYPE html>
+<html>
+<head>
+    <title>profil saya </title>
+    <link rel="stylesheet"href="style.css">
+</head>
+<body>
+    <div class="profile-card">
+<img src="https://static.republika.co.id/uploads/images/inpicture_slide/karakter-film-animasi_201228140222-625.jpg" alt="FOTO PROFIL" WIDTH="150">
+<h1>AFRAH ALIFAH</h1>
+<P>PERKENALKAN NAMA SAYA AFRAH ALIFAH BIASA DIPANGGIL AFRAH.SAYA BARU SAJA NAIK DI KELAS XI DAN SAYA SUDAH BERUMUR 16 TAHUN
+<h2>Hubungi saya:</h2>
+<ul> 
+<li><a href="https://instagram.com/USERNAME">Instagram</a></li>
+<li><href="https://github.com/USERNAME">GitHub</a></li>
+</ul>
+</div>
+<body>
+</html>
