--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="profile-card">
-<img src="https://static.republika.co.id/uploads/images/inpicture_slide/karakter-film-animasi_201228140222-625.jpg" alt="FOTO PROFIL" WIDTH="150">
+<img src="profil.jpeg" alt="FOTO PROFIL" WIDTH="150">
 <h1>AFRAH ALIFAH</h1>
 <P>PERKENALKAN NAMA SAYA AFRAH ALIFAH BIASA DIPANGGIL AFRAH.SAYA BARU SAJA NAIK DI KELAS XI DAN SAYA SUDAH BERUMUR 16 TAHUN
 <h2>Hubungi saya:</h2>
